  - Deprecated Mojo::Transaction::WebSocket::build_frame and
    Mojo::Transaction::WebSocket::parse_frame in favor of
    Mojo::WebSocket::build_frame and Mojo::WebSocket::parse_frame. (batman)
  - Replaced deprecated proxy method in Mojo::Message::Request with an
    attribute.
  - Added SNI support to all built-in web servers. (bpmedley, sri)
  - Added module Mojo::WebSocket. (batman)
  - Updated jQuery to version 2.2.0.
  - Improved performance of Mojo::Server::Daemon and Mojo::UserAgent slightly.
  - Improved mtime attribute in Mojo::Asset::Memory to default to the value of
    $^T.
  - Fixed a few timing bugs.
  - Fixed url_for to handle fragments correctly.

6.39  2016-01-03
  - Updated links to Mojolicious website.
  - Fixed small html_unescape bug in Mojo::Util.
  - Fixed handling of invalid max age in Mojo::UserAgent::CookieJar.

6.38  2015-12-19
  - Updated prettify.js to version 8-Dec-2015.
  - Improved form generation in Mojo::UserAgent::Transactor to use UTF-8 as the
    default charset.

6.37  2015-12-14
  - Added protocol and with_protocols methods to Mojo::Transaction::WebSocket.
  - Fixed a few reference encoding bugs in Mojo::JSON.
  - Fixed a few form generation bugs in Mojo::UserAgent::Transactor.

6.36  2015-12-08
  - Improved Mojo::JSON performance slightly. (haarg)
  - Improved inactivity_timeout helper to return the current controller object.

6.35  2015-12-04
  - Removed deprecated collecting method from Mojo::UserAgent::CookieJar.
  - Fixed warnings in Mojo::Cookie::Response.

6.34  2015-12-01
  - Improved Hypnotoad to report problems that have occured during the creation
    of listen sockets.
  - Fixed bug in Mojo::DOM where the wrap method would attempt to wrap an
    HTML/XML fragment around the content of root nodes.
  - Fixed bug in Mojo::DOM where the wrap_content method would attempt to wrap
    an HTML/XML fragment around nodes that do not have children.
  - Fixed a few small formatting bugs in Mojolicious::Plugin::PODRenderer.
